Correct link, it was occupying the full container height, by applying align-items:flex-start; to parent

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,6 +1,7 @@
 .khan__book-container {
   width: 80%;
   display: flex; 
+  align-items: flex-start;
   margin-top: 68px;
   margin-right: auto;
   margin-left: auto;
